@@ -1,7 +1,7 @@
 doit>=0.30.1
 Pygments>=1.6
 Pillow>=2.4.0
-python-dateutil>=2.4.0
+python-dateutil>=2.6.0
 docutils>=0.13
 mako>=1.0.0
 Markdown>=2.4.0
